--- a/shade.cabal
+++ b/shade.cabal
@@ -1,7 +1,7 @@
 name:                shade
-version:             0.1.0.1
+version:             0.1.0.4
 synopsis:            A control structure used to combine heterogenous types with delayed effects.
-description:         Please see the readme.
+description:         Please see the README.
 homepage:            https://github.com/fredefox/shade#readme
 license:             BSD3
 license-file:        LICENSE
@@ -11,20 +11,13 @@ copyright:           Copyright: (c) 2017 Frederik Hanghøj Iversen
 category:            Web
 build-type:          Simple
 extra-source-files:  README.md
+                     Example.lhs
 cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
   exposed-modules:     Control.Monad.Shade
   build-depends:       base >= 4.7 && < 5
-  default-language:    Haskell2010
-
-executable shade
-  hs-source-dirs:      .
-  main-is:             README.lhs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
-                     , shade
   default-language:    Haskell2010
 
 source-repository head
