--- a/shade.cabal
+++ b/shade.cabal
@@ -8,7 +8,7 @@ license-file:        LICENSE
 author:              Frederik Hanghøj Iversen
 maintainer:          fhi.1990@gmail.com
 copyright:           Copyright: (c) 2017 Frederik Hanghøj Iversen
-category:            Web
+category:            Control
 build-type:          Simple
 extra-source-files:  README.md
                      Example.lhs
@@ -17,7 +17,8 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Control.Monad.Shade
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       mtl >= 2.2.1
   default-language:    Haskell2010
 
 source-repository head
