--- a/shade.cabal
+++ b/shade.cabal
@@ -18,7 +18,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Control.Monad.Shade
   build-depends:       base >= 4.7 && < 5,
-                       mtl >= 2.2.1
+                       mtl >= 2.2.1,
+                       transformers >= 0.5.2.0
   default-language:    Haskell2010
 
 source-repository head
